final changes, tested on real microstructures

--- a/_runall.ipynb
+++ b/_runall.ipynb
@@ -2,12 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n",
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import glob\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.backends.backend_pdf import PdfPages\n",
     "from flaskapp.imaging import MicroStructure\n",
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,23 +95,39 @@
     "        fraction = white_pixels / len(pixels)\n",
     "        return fraction\n",
     "    \n",
-    "#     def compute_diameters_line_approx(image):\n",
-    "#         w = image.shape[0]\n",
-    "#         h = image.shape[1]\n",
-    "        \n",
-    "#         # mid horizontal approx\n",
-    "#         for i in range(w):\n",
+    "    class Grain:\n",
+    "        def __init__(self, contour):\n",
+    "            self.contour = contour\n",
+    "            self.area = cv2.contourArea(self.contour)\n",
+    "            self.diameter = (4 * self.area / np.pi)**0.5\n",
+    "\n",
+    "    def compute_diameters_line_approx(image):\n",
+    "        image = cv2.bitwise_not(image)\n",
+    "        contours, hierarchy = cv2.findContours(image, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "        valid_contours = []\n",
+    "        for contour in contours:\n",
+    "            if cv2.contourArea(contour) > 1e3 and cv2.contourArea(contour) < 1e5:\n",
+    "                valid_contours.append(contour)\n",
+    "\n",
+    "        grains = []\n",
+    "        for vc in valid_contours:\n",
+    "            grains.append(Grain(vc))\n",
+    "\n",
+    "        correct_average_grain_diameter = sum([g.diameter for g in grains]) / len(grains)\n",
+    "        return correct_average_grain_diameter\n",
     "    \n",
     "    correct_dark_frac = compute_phase_fraction(p1_mask)\n",
     "    correct_light_frac = compute_phase_fraction(p2_mask)\n",
     "    correct_line_frac = compute_phase_fraction(lam_mask)\n",
+    "    correct_ave_diameter = compute_diameters_line_approx(gb_mask)\n",
     "    \n",
     "    table_data=[\n",
     "        [\"metric\", \"correct\", \"predicted\", \"error\"],\n",
     "        [\"dark frac\", \"%.3f\"%correct_dark_frac, \"%.3f\"%mc.dark_fraction, \"{0:.3f}%\".format(abs(correct_dark_frac-mc.dark_fraction)*100)],\n",
     "        [\"white frac\", \"%.3f\"%correct_light_frac, \"%.3f\"%mc.light_fraction, \"{0:.3f}%\".format(abs(correct_light_frac-mc.light_fraction)*100)],\n",
     "        [\"line frac\", \"%.3f\"%correct_line_frac, \"%.3f\"%mc.line_fraction, \"{0:.3f}%\".format(abs(correct_line_frac-mc.line_fraction)*100)],\n",
-    "        [\"ave grain diameter\", \"n/a\", \"%.3f\"%mc.average_grain_diameter, \"n/a\"],\n",
+    "        [\"ave grain diameter\", \"%.3f\"%correct_ave_diameter, \"%.3f\"%mc.average_grain_diameter, \"{0:.3f}%\".format(abs(correct_ave_diameter-mc.average_grain_diameter)/correct_ave_diameter*100)],\n",
     "    ]\n",
     "    table = axs[1].table(cellText=table_data, loc='best')\n",
     "    table.set_fontsize(16)\n",
@@ -116,9 +145,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0/200\n",
+      "10/200\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jay/.pyenv/versions/3.7.5/envs/microscan/lib/python3.7/site-packages/ipykernel_launcher.py:33: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20/200\n",
+      "30/200\n",
+      "40/200\n",
+      "50/200\n",
+      "60/200\n",
+      "70/200\n",
+      "80/200\n",
+      "90/200\n",
+      "100/200\n",
+      "110/200\n",
+      "120/200\n",
+      "130/200\n",
+      "140/200\n",
+      "150/200\n",
+      "160/200\n",
+      "170/200\n",
+      "180/200\n",
+      "190/200\n"
+     ]
+    }
+   ],
    "source": [
     "pp = PdfPages('foo.pdf')\n",
     "\n",
